# medcoupling-v10

./: CMakeLists.txt  CMakePresets.json  pyproject.toml
.github/scripts/: conan-ci-setup.sh
.github/workflows/: ci.yml
medcoupling_core/: CMakeLists.txt
medcoupling_core/include/array/: MEDCoupling.hxx
medcoupling_core/include/interp_kernel/: INTERPKERNELDefines.hxx
medcoupling_core/python/: CMakeLists.txt
medcoupling_core/python/medcoupling_core/: CMakeLists.txt  MEDCoupling.i  MEDCouplingBasicsTest1.py  MEDCouplingBasicsTest2.py  MEDCouplingBasicsTest3.py  MEDCouplingBasicsTest4.py  MEDCouplingBasicsTest5.py  MEDCouplingBasicsTest6.py  MEDCouplingBasicsTest7.py  MEDCouplingDataForTest.py  MEDCouplingExamplesTest.py  MEDCouplingIntersectTest.py  MEDCouplingNumPyTest.py  MEDCouplingPickleTest.py  UsersGuideExamplesTest.py  UsersGuideExamplesTest_numpy.py  geom2medcoupling.py  medcoupling_core.i  vtk2medcoupling.py
medcoupling_core/python/medfile_api/: CMakeLists.txt
medcoupling_core/source/: CMakeLists.txt
medcoupling_core/source/amr/: CMakeLists.txt
medcoupling_core/source/array/: CMakeLists.txt
medcoupling_core/source/field/: CMakeLists.txt
medcoupling_core/source/interp_kernel/: CMakeLists.txt
medcoupling_core/source/interp_kernel/LinearAlgebra/: InterpKernelDenseMatrix.cxx
medcoupling_core/source/mesh/: CMakeLists.txt
medcoupling_core/source/polymesh/: CMakeLists.txt
medcoupling_core/test/: CMakeLists.txt
medcoupling_core/test/interp_kernel/: BasicMainTest.hxx  CMakeLists.txt
medcoupling_core/test/medcoupling_core/: CMakeLists.txt
medcoupling_tools/: CMakeLists.txt
medcoupling_tools/icoco/: CMakeLists.txt
medcoupling_tools/icoco/source/: CMakeLists.txt
medcoupling_tools/partitioner/source/: CMakeLists.txt
medcoupling_tools/remapper/: CMakeLists.txt
medcoupling_tools/remapper/python/sequential/: CMakeLists.txt  MEDCouplingRemapperTest.py  RemapperUserGuideExamplesTest.py
medcoupling_tools/remapper/source/sequential/: CMakeLists.txt
medcoupling_tools/remapper/test/sequential/: CMakeLists.txt
medcoupling_tools/shape_recognizer/: ShapeRecongConstants.hxx
medcoupling_tools/shape_recognizer/Test/: MathOpsTest.hxx
pymedcoupling/: CMakeLists.txt
